manifests/04-readonly-root/template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spspreadonlyrootfilesystem
spec:
  crd:
    spec:
      names:
        kind: K8sPSPReadOnlyRootFilesystem
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spspreadonlyrootfilesystem
        
        violation[{"msg": msg}] {
            c := input.review.object.spec.containers[_]
            not has_readonly_root(c)
            msg := sprintf("Violacion ISO 27001: El contenedor %v debe tener readOnlyRootFilesystem en true", [c.name])
        }
        
        has_readonly_root(c) {
            c.securityContext.readOnlyRootFilesystem == true
        }
